<resources>
    <string name="app_name">Popular Movies</string>

    <string name="action_settings">Settings</string>

    <string name="movie_title">Movie Title</string>
    <string name="movie_release_year">Release Year</string>
    <string name="movie_running_time">Running Time</string>
    <string name="movie_rating">Rating</string>
    <string name="movie_description">Movie Description</string>
    <string name="movie_trailers">Trailers</string>
    <string name="movie_mark_as_favorite">Mark as Favorite</string>
    <string name="reviews_title">Reviews</string>

    <string name="pref_sort_order_most_popular">Most Popular</string>
    <string name="pref_sort_order_highest_rated">Highest Rated</string>
    <string name="pref_sort_order_favorites">Favorites</string>

    <string name="pref_sort_order_key">sort_order</string>
    <string name="pref_sort_order_title">Sort Order</string>

    <string name="favorite_button_name">Mark as Favorite</string>



</resources>
