<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.ubiq.android.app.mobilemovies.fragments.DetailActivityFragment"
    android:background="@color/black">
    !--
    !--  Basic Movie Information: Title, Poster, Release Date, Popularity
    !--    Running Time, Description
    !--
    <TextView
        android:id="@+id/movie_title_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_accent_color"
        android:elegantTextHeight="false"
        android:gravity="start|center_vertical"
        android:text="@string/movie_title"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:paddingStart="0dip"
        android:paddingLeft="15dip"
        android:typeface="sans"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="225dip"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/detailImage"
            android:layout_width="200dip"
            android:layout_height="225dip"
            android:scaleType="centerInside"
            android:contentDescription="@string/movie_description"
            android:layout_gravity="top"
            android:layout_marginTop="5dip"
            android:layout_marginRight="10dip"
            android:layout_marginLeft="5dip"
            android:layout_marginBottom="5dip"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top"
            android:layout_gravity="top|right"
            android:layout_marginLeft="2dip"
            android:layout_marginTop="5dip"
            android:weightSum="1">


            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_release_year"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:textSize="20sp"
                android:textColor="@color/gray"/>

            <TextView
                android:id="@+id/runningtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_running_time"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:textSize="15sp"
                android:textStyle="italic"
                android:textColor="@color/gray"
                />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_rating"
                android:gravity="top|left"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="10dip"
                android:textStyle="bold"
                android:textColor="@color/gray"/>

            <ImageButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_mark_as_favorite"
                android:src="@drawable/ic_star_black_24dp"
                android:id="@+id/button_favorite"
                android:background="@color/black"
                android:tint="@color/accent_color"/>

        </LinearLayout>
    </LinearLayout>
    <com.ubiq.android.app.mobilemovies.widget.ExpandableTextView
        android:id="@+id/movie_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_description"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:textStyle="normal"
        android:elegantTextHeight="false"
        android:textColor="@color/white"/>

    !--
    !--  Trailers
    !--
    !-- horizontal line
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/white" />


    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingLeft="5dip"
              android:text="Trailers"
              android:textStyle="bold"
              android:paddingTop="5dip"
              android:id="@+id/trailer_heading"
              android:textColor="@color/white"/>

    <ListView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/listview_trailers"/>


</LinearLayout>
